# nonebot_plugin_gamedraw

./: .gitignore  LICENSE  README.md  genshin_handle.py  pyproject.toml  requirements.txt  update_game_info.py
draw_card/: __init__.py  announcement.py  async_update_game_info.py  azur_handle.py  build_image.py  config.py  count_manager.py  create_img.py  fgo_handle.py  genshin_handle.py  guardian_handle.py  init_card_pool.py  onmyoji_handle.py  pcr_handle.py  prc_handle.py  pretty_handle.py  prts_handle.py  rule.py  update_game_info.py  update_game_requests_info.py  update_game_simple_info.py  util.py
draw_card/handles/: azur_handle.py  ba_handle.py  base_handle.py  fgo_handle.py  genshin_handle.py  guardian_handle.py  onmyoji_handle.py  pcr_handle.py  pretty_handle.py  prts_handle.py
draw_card/utils/: __init__.py  announcement.py  init_card_pool.py
