[tool.poetry]
name = "nonebot_plugin_gamedraw"
version = "0.3.2"
description = "nonebot2 实现自动更新的 原神/明日方舟/赛马娘/坎公骑冠剑/公主连结/碧蓝航线/FGO/阴阳师 抽卡插件"
authors = ["HibiKier <775757368@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HibiKier/nonebot_plugin_gamedraw"
repository = "https://github.com/HibiKier/nonebot_plugin_gamedraw"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-apscheduler = "^0.1.2"
aiofiles = "^0.8.0"
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.9.3"
cn2an = "^0.5.16"
dateparser = "^1.1.0"
lxml = "^4.6.3"
Pillow = "^8.2.0"
pypinyin = "^0.42.0"
typing-extensions = ">=3.10.0,<5.0.0"
ujson = {version = "^4.0.2", optional = true}

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
